--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
         if: success()
         with:
           name: Folia
-          path: build/libs/
+          path: patches/server/build/libs/
